--- a/Lab3/lab2.ipynb
+++ b/Lab3/lab2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Lab 3\n",
     "\n",
-    "In this lab we will cover 3D geometry and camera projections. Complete all work inside the this notebook file and submit only this file.\n",
+    "In this lab, we will cover 3D geometry and camera projections. Complete all work inside this notebook file and submit only this file.\n",
     "\n",
     "##### Introduction\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "![](image.png \"Projection Matrix\")\n",
     "\n",
-    "The projection matirix is used to convert from 3D read world coordintes to 2D image coordinates and is formed through the multiplication of the camera intrinsic matrix, which hold properties about the camera such as focal length and near and far plane, and the camera extrinsic matrix, which holds geometric properties of the camera such as rotation and translation.  \n",
+    "The projection matrix is used to convert from 3D read world coordinates to 2D image coordinates and is formed through the multiplication of the camera intrinsic matrix, which holds properties about the camera such as focal length and near and far plane, and the camera extrinsic matrix, which holds geometric properties of the camera such as rotation and translation.  \n",
     "\n",
     "### Step 1: Defining the Extrinsic Matrix\n",
     "\n",
@@ -32,9 +32,9 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "where t is the translation and r is the 3x3 rotation matrix. The bottom row of [0,0,0,1] ensures that the extrinsic matrix is in the homogonous coordinate system. A more user friendly way to represent the extrisc matrix is by bulding it from the camera pose as opposed to from how world points should transform to camera coordinates. This is relatively easy to do, we can just take the inverse of the matrix that defines the camera pose. \n",
+    "where t is the translation and r is the 3x3 rotation matrix. The bottom row of [0,0,0,1] ensures that the extrinsic matrix is in the homogonous coordinate system. A more user-friendly way to represent the extrinsic matrix is by building it from the camera pose as opposed to from how world points should transform to camera coordinates. This is relatively easy to do, we can just take the inverse of the matrix that defines the camera pose. \n",
     "\n",
-    "Our camera pose can be defined as two components, ${C}$ and ${R_c}$, the camera center is world space and the rotation matrix describing the camera's orientation in world space. Therefore the transformation matrix that represents the camera pose can be defined as \n",
+    "Our camera pose can be defined as two components, ${C}$ and ${R_c}$, the camera center is world space and the rotation matrix describes the camera's orientation in world space. Therefore the transformation matrix that represents the camera pose can be defined as \n",
     "\n",
     "$$\n",
     " [R_c|C] = \\begin{bmatrix}\n",
@@ -43,7 +43,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "and the extrinsic matrix ${[R|t]}$ from ${[R_c|C]}$ can be calculated by find the inverse as follows, where T is the transpose:\n",
+    "and the extrinsic matrix ${[R|t]}$ from ${[R_c|C]}$ can be calculated by finding the inverse as follows, where T is the transpose:\n",
     "\n",
     "$$\n",
     "\\begin{bmatrix}\n",
@@ -90,7 +90,7 @@
    "source": [
     "### Step 2: Defining the Intrinsic matrix\n",
     "\n",
-    "The intrinsic matrix is far easier to define and is paramterised by the focal length ${f}$, the principle point offset ${x}$ and the skew ${s}$.\n",
+    "The intrinsic matrix is far easier to define and is parameterised by the focal length ${f}$, the principle point offset ${x}$ and the skew ${s}$.\n",
     "\n",
     "$$\n",
     "k = \n",
@@ -131,7 +131,7 @@
     "P = K [R|t]\n",
     "$$\n",
     "\n",
-    "##### Task: Calculate and print the projection matrix using the previously calculated intrinsic and extrinsic matracies"
+    "##### Task: Calculate and print the projection matrix using the previously calculated intrinsic and extrinsic matrices"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "source": [
     "### Step 5: Project the point cloud\n",
     "\n",
-    "In this step we will project the point cloud onto the image plane using the projection matrix we have deffined above. Apply the transformation matrix to the point cloud data and print out the first 10 projected points (the uv coordinates, see fig 1).\n",
+    "In this step, we will project the point cloud onto the image plane using the projection matrix we have defined above. Apply the transformation matrix to the point cloud data and print out the first 10 projected points (the uv coordinates, see fig 1).\n",
     "\n",
     "To do this you will first need to convert the points to homogeneous coordinates like so [x,y,z,1]. You will then need to apply the projection matrix. Finally you will need to normalize the projected points by the third coordinate, like `projected_point /= projected_point[2]` to get 2D image coordinates."
    ]
@@ -205,7 +205,7 @@
    "source": [
     "### Step 6: Rasterize the points onto the image array\n",
     "\n",
-    "We will rasterize the points onto an image plane of size 800 by 800. To do this we will first define an image buffer of shape 800x800x3. We will then iterate through each of the points, determin if it falls on the image plane (ie x <= 0 < image_width) and if so update the image buffer with the colour value of the point."
+    "We will rasterize the points onto an image plane of size 800 by 800. To do this we will first define an image buffer of shape 800x800x3. We will then iterate through each of the points, determine if it falls on the image plane (ie x <= 0 < image_width) and if so update the image buffer with the colour value of the point."
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 7: Define a new camera center and rotation matrix to render a top down view of the scene."
+    "### Step 7: Define a new camera centre and rotation matrix to render a top-down view of the scene."
    ]
   },
   {
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Q3: What would be the affect of increasing/decreasing the fx and fy values? "
+    "#### Q3: What would be the effect of increasing/decreasing the fx and fy values? "
    ]
   },
   {
